syntax = "proto3";

package proto;

option java_package = "com.xiaopeng.appstore.protobuf";
option java_multiple_files = true;

message AppIconDataProto{
  string small_icon = 1;
  string large_icon = 2;
}

