syntax = "proto3";

package proto;
import "app_item.proto";

option java_package = "com.xiaopeng.appstore.protobuf";
option java_multiple_files = true;

message UsbAppListProto {
  repeated AppItemProto usbAppList = 1;
}
